tests/test_struct/bad/output/ambiguous_fields.catala_en.A.Interpret
[ERROR] This struct field name is ambiguous, it can belong to Foo or Bar. Disambiguate it by prefixing it with the struct name.

  --> tests/test_struct/bad/ambiguous_fields.catala_en
   | 
16 |   definition y equals x.f
   |                         ^
   + Article
